--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,17 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item
         android:id="@+id/nav_home"
         android:title="Accueil"
         android:icon="@android:drawable/ic_menu_agenda"/>
-
-
 
     <item
         android:id="@+id/nav_profile"
         android:title="Profil"
         android:icon="@android:drawable/ic_menu_myplaces"/>
 
-
+    <item
+        android:id="@+id/nav_logout"
+        android:title="Déconnexion"
+        android:icon="@android:drawable/ic_lock_power_off"/>
 </menu>
