--- a/app/src/main/res/layout/item_demande.xml
+++ b/app/src/main/res/layout/item_demande.xml
@@ -13,7 +13,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="12dp"
         android:orientation="vertical">
 
         <!-- Titre de la mission -->
@@ -44,5 +43,16 @@
             android:textSize="14sp"
             android:padding="4dp"
             android:textColor="#FFFFFF" />
+
+        <!-- Bouton Voir Détails -->
+        <Button
+            android:id="@+id/btnVoirDetail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Voir Détails"
+            android:layout_marginTop="8dp"
+            android:backgroundTint="#52C2C7"
+            android:textColor="#FFFFFF"/>
     </LinearLayout>
+
 </androidx.cardview.widget.CardView>
