--- a/app/src/main/res/layout/fragment_description_mission.xml
+++ b/app/src/main/res/layout/fragment_description_mission.xml
@@ -1,29 +1,28 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
- >
+    android:layout_height="match_parent">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp">
-        <Button
-            android:id="@+id/buttonMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Voir les messages"
-            android:layout_marginTop="16dp"
-            android:layout_gravity="center"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <Button
+                android:id="@+id/buttonMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Voir les messages"
+                android:layout_marginTop="16dp"
+                android:layout_gravity="center"/>
 
             <TextView
                 android:id="@+id/tvTitre"
@@ -57,7 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
+
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
