--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -4,14 +4,31 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="4dp">
+    android:padding="6dp">
 
-    <TextView
-        android:id="@+id/textViewMessage"
+    <LinearLayout
+        android:id="@+id/bubbleLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:padding="12dp"
-        android:textColor="@android:color/black"
-        android:background="@drawable/message_bubble"
-        android:maxWidth="250dp"/>
+        android:background="@drawable/bubble_receiver">
+
+        <TextView
+            android:id="@+id/textViewDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="11sp"
+            android:textColor="#777777"
+            android:layout_marginBottom="4dp"/>
+
+        <TextView
+            android:id="@+id/textViewMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:textColor="@android:color/black"
+            android:maxWidth="260dp"/>
+    </LinearLayout>
+
 </LinearLayout>
