--- a/app/src/main/res/layout/fragment_description_mission.xml
+++ b/app/src/main/res/layout/fragment_description_mission.xml
@@ -56,7 +56,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
-
+        <Button
+            android:id="@+id/btnGoToSupervision"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Superviser la mission"
+            android:layout_marginTop="20dp"
+            android:backgroundTint="#FF9800"
+            android:visibility="gone" />
     </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
