--- a/app/src/main/res/menu/bottom_nav_participant.xml
+++ b/app/src/main/res/menu/bottom_nav_participant.xml
@@ -9,5 +9,9 @@
         android:id="@+id/mesDemandesFragment"
         android:icon="@drawable/ic_demande"
         android:title="Mes demandes" />
+    <item
+        android:id="@+id/pharmaChatFragment"
+        android:icon="@drawable/ic_pharma"
+        android:title="Assistant IA" />
 
 </menu>
